# TDDD27_2022_timelines

./: README.md
_deprecated_backend_actix/: Cargo.toml
_deprecated_backend_actix/src.bak/: graphql.rs
_deprecated_database_diesel_postgres/: Cargo.toml  README.md
_deprecated_database_diesel_postgres/migrations/2022-04-18-115253_create_events/: down.sql  up.sql
_deprecated_database_diesel_postgres/migrations/2022-04-29-113629_create_tasks/: up.sql
_deprecated_database_diesel_postgres/migrations/2022-04-29-114448_create_sub_tasks/: up.sql
_deprecated_database_diesel_postgres/src.bak/table/: mod.rs  tasks.rs  timelines.rs  users.rs
_deprecated_graphql_api/: apiVersion.graphql  userdata.graphql
backend-actix/: Cargo.toml
backend_actix/: Cargo.toml
backend_actix/src/: main.rs
backend_actix/src/database/: mod.rs
backend_actix_seaorm_postgres/: Cargo.toml
backend_actix_seaorm_postgres/entity/: Cargo.toml
backend_actix_seaorm_postgres/entity/src/: events.rs  lib.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sub_tasks.rs  tasks.rs  timelines.rs  timelines_users.rs  users.rs
backend_actix_seaorm_postgres/migration/: Cargo.toml
backend_actix_seaorm_postgres/migration/src/: lib.rs  m20220517_114450_create_timelines.rs  m20220517_123500_create_users.rs  m20220517_123600_create_events.rs  m20220517_124200_create_timelines_users.rs  m20220517_124500_create_tasks.rs  m20220517_124900_create_sub_tasks.rs  m20220524_13340_create_tokens.rs
backend_actix_seaorm_postgres/src/: main.rs
backend_actix_seaorm_postgres/src/graphql/: custom_types.rs  mod.rs  schema.rs
backend_actix_seaorm_postgres/src/graphql/mutation/: mod.rs  tasks.rs  timelines.rs  user_timelines.rs  users.rs
backend_actix_seaorm_postgres/src/graphql/query/: mod.rs  sub_tasks.rs  tasks.rs  timelines.rs  timelines_users.rs  user_data.rs  user_timelines.rs  users.rs
backend_actix_seaorm_postgres/src/graphql/subscription/: integers.rs  mod.rs  timelines.rs  users.rs
backend_actix_seaorm_postgres/src/routes/: gql.rs  mod.rs
database-diesel-postgres/: Cargo.toml  README.md  diesel.toml
database-diesel-postgres/migrations/2022-04-18-115146_create_timelines/: up.sql
database-diesel-postgres/migrations/2022-04-18-115229_create_users/: up.sql
database-diesel-postgres/migrations/2022-04-18-115253_create_events/: up.sql
database-diesel-postgres/migrations/2022-04-18-121944_create_timelines_users/: down.sql  up.sql
database-diesel-postgres/migrations/2022-04-18-161730_timelines_add_private/: down.sql  up.sql
database-diesel-postgres/migrations/2022-04-18-175129_events_add_done/: down.sql  up.sql
database-diesel-postgres/src/: db_types.rs  diesel_types.rs  events.rs  lib.rs  models.rs  schema.rs  timelines.rs  users.rs
database-diesel-postgres/src/models/: enums.rs
database-diesel-postgres/src/table/: events.rs  sub_events.rs  timelines_users.rs  users.rs
database_diesel_postgres/: .env  Cargo.toml  diesel.toml
database_diesel_postgres/migrations/2022-04-18-115146_create_timelines/: down.sql  up.sql
database_diesel_postgres/migrations/2022-04-18-115229_create_users/: up.sql
database_diesel_postgres/migrations/2022-04-18-115253_create_events/: down.sql  up.sql
database_diesel_postgres/migrations/2022-04-18-121944_create_timelines_users/: down.sql  up.sql
database_diesel_postgres/migrations/2022-04-19-085649_create_subevents/: down.sql  up.sql
database_diesel_postgres/src/: api.rs  lib.rs  schema.rs
database_diesel_postgres/src.bak/: lib.rs
database_diesel_postgres/src.bak/models/: enums.rs
database_diesel_postgres/src.bak/table/: events.rs  mod.rs  tasks.rs  timelines_users.rs  users.rs
database_diesel_postgres/src/api/: mod.rs  query.rs
database_diesel_postgres/src/models/: enums.rs
database_diesel_postgres/src/table/: events.rs  mod.rs  sub_events.rs  sub_tasks.rs  timelines.rs  timelines_users.rs  users.rs
frontend-yew/: Cargo.toml  index.html
frontend-yew/src/: main.rs
frontend-yew/src/app/: mod.rs
frontend-yew/src/app/list_selector_component/: mod.rs
frontend-yew/src/app/task_list_component/: mod.rs  style.scss
frontend-yew/src/task_list_component/: mod.rs
frontend_yew/: Cargo.toml  README.md  index.html
frontend_yew/graphql/: schema.graphql
frontend_yew/src/: main.rs
frontend_yew/src/app/: account_info.rs  list_selector.rs  list_veiw.rs  list_view.rs  login.rs  login.scss  mod.rs  navigation_bar.rs  signup.rs  styles.scss  task_info.rs  task_item.rs  task_list.rs  timeline_item.rs  timeline_list.rs
frontend_yew/src/app/calender/: mod.rs
frontend_yew/src/app/calender/week_view/: mod.rs
frontend_yew/src/app/color_picker/: mod.rs
frontend_yew/src/app/gql/: mutation.rs  query.rs
frontend_yew/src/app/list_selector/: mod.rs
frontend_yew/src/app/list_selector_component/: mod.rs
frontend_yew/src/app/list_view/: mod.rs
frontend_yew/src/app/login/: mod.rs
frontend_yew/src/app/navigation_bar/: mod.rs
frontend_yew/src/app/signup/: mod.rs
frontend_yew/src/app/styles/: account_info.scss  list_view.scss  login.scss  navbar.scss  signup.scss  styles.scss
frontend_yew/src/app/styles/list_view/: list_selector.scss  task_info.scss  task_list.scss  timeline_list.scss
frontend_yew/src/app/styles/list_view/task_list/: checkbox.scss
frontend_yew/src/app/styles/list_view/timeline_list/: timeline_item.scss
frontend_yew/src/app/task/: mod.rs
frontend_yew/src/app/task_info/: mod.rs
frontend_yew/src/app/task_list/: mod.rs
frontend_yew/src/app/task_list_component/: mod.rs  style.scss
frontend_yew/src/backend_graphql/: mod.rs
frontend_yew/src/backend_graphql_userdata/: mod.rs
frontend_yew/src/backend_test/: mod.rs
frontend_yew/src/test_apps/: mod.rs
frontend_yew/src/test_apps/backend_graphql_userdata/: mod.rs
frontend_yew/src/yew_tutorial/: mod.rs
graphql/: query.graphql  schema.graphql
graphql_api/: Cargo.toml  schema.graphql  userdata.graphql
graphql_api/src/: lib.rs
timelines-payloads/: Cargo.toml
