[package]
name = "database-diesel-postgres"
version = "0.1.0"
authors = ["Edvin Kjell <edvkj374@studentliu.se>", "Linus Käll <linka231@studentliu.se>", "Sebastian Frisenfelt <sebfr298@studentliu.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["postgres"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
dotenv = "0.15.0"