[package]
name = "database_diesel_postgres"
version = "0.1.0"
authors = ["Edvin Kjell <edvkj374@studentliu.se>", "Linus Käll <linka231@studentliu.se>", "Sebastian Frisenfelt <sebfr298@studentliu.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for OsRng
rand_core = { version = "0.6.3", features = ["std"] }

# Used for hasing and verifying passwords
# https://crates.io/crates/argon2
argon2 = "0.4.0"

# Better types for time
chrono = "0.4.19"

# The ORM used for sending queries to Postgres
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }

# get directory specific environmental variables.
dotenv = "0.15.0"