[package]
name = "frontend_yew"
version = "0.1.0"
edition = "2021"
author = ["Edvin Kjell <edvkj374@studentliu.se>", "Linus Käll <linka231@studentliu.se>", "Sebastian Frisenfelt <sebfr298@studentliu.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.0"
wasm-bindgen = "0.2.80"
yew-stdweb = "0.18.0"
web-sys = { version = "0.3.57", features = ["HtmlInputElement"] }
gloo = "0.7.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }