[package]
name = "frontend_yew"
version = "0.1.0"
edition = "2021"
author = ["Edvin Kjell <edvkj374@studentliu.se>", "Linus Käll <linka231@studentliu.se>", "Sebastian Frisenfelt <sebfr298@studentliu.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#### MVC ####
yew = { version = "0.19.3" }

#### Web Api ####
gloo = "0.7.0"
wasm-bindgen = "0.2.80"
reqwasm = "0.5"
reqwest = { version = "0.11.10", features = ["json"] }
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlButtonElement"] }

#### DeSerilaizing ####
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

#### Async ####
wasm-bindgen-futures = "0.4"

#### GraphQL ####
graphql_client = { version = "0.10.0" }
graphql_api = { path = "../graphql_api" }

#### logging ####
weblog = { version = "0.3.0" }

#### Time ####
chrono = { version = "0.4.19", features = ["wasmbind"] }
