[package]
name = "frontend_yew"
version = "0.1.0"
edition = "2021"
author = ["Edvin Kjell <edvkj374@studentliu.se>", "Linus Käll <linka231@studentliu.se>", "Sebastian Frisenfelt <sebfr298@studentliu.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#### MVC ####
yew = { version = "0.19.3" }

#### Web Api ####
gloo-storage = "0.2.1"
gloo = "0.7.0"
wasm-bindgen = "0.2.80"
reqwasm = "0.5"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlButtonElement"] }

#### DeSerilaizing ####
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

#### Async ####
wasm-bindgen-futures = "0.4"

#### GraphQL ####
graphql_api = { path = "../graphql_api" }
cynic = { version = "1.0.0", features = [ "surf-wasm-client" ] }
surf = { version = "2.3.2", default-features = false, features = [ "wasm-client" ] }

#### logging ####
weblog = { version = "0.3.0" }

#### Time ####
chrono = { version = "0.4.19", features = ["wasmbind"] }

#### Routing ####
yew-router = "0.16"

#### Yew Hooks ####
yew-hooks = { version = "0.1.56" }

#### Regex ####
regex = "1"

[dev-dependencies]
insta = "1.14.0"